--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "origin-react-starter",
+  "name": "react200-weather-app",
   "version": "0.1.0",
-  "description": "Base application setup for creating a new react project.",
+  "description": "Weather App built from origin-react-starter base application setup for creating a new react project.",
   "main": "server/index.js",
   "scripts": {
-    "build": "npm run less && webpack -w --mode development",
-    "start": "node server/index.js",
+    "build": "npm run less && webpack --mode development",
+    "start": "npm run build && node server/index.js",
     "less": "lessc src/css/style.less dist/css/style.css",
     "lint": "eslint .",
     "test": "npm run build && mocha test/.setup.js test/*.spec.js --exit"
@@ -20,6 +20,7 @@
     "babel-register": "^6.4.3",
     "bluebird": "^3.5.0",
     "chai": "^3.5.0",
+    "dotenv": "^8.0.0",
     "express": "^4.15.3",
     "json-loader": "^0.5.4",
     "lodash": "^4.15.0",
@@ -32,6 +33,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.0",
+    "redux-promise-middleware": "^6.1.1",
     "serve-favicon": "^2.0.1",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3"
