--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dotenv": "^8.0.0",
     "express": "^4.15.3",
     "json-loader": "^0.5.4",
+    "less": "^3.8.1",
+    "less-plugin-autoprefix": "^1.5.1",
     "lodash": "^4.15.0",
     "lodash-webpack-plugin": "^0.10.2",
     "morgan": "^1.8.1",
